# boq_app

./: .gitignore  CLAUDE.md  Dockerfile.admin  Dockerfile.backend  Dockerfile.frontend  HOW_TO_RUN.md  PACKAGING.md  README_HARDCODED.md  ac_sheet_processor.py  analyze_final_boq.py  app.py  base_sheet_processor.py  boq_launcher.py  boq_processor.py  build_pyinstaller.py  check_db.py  config_manager.py  debug_columns.py  debug_containers.sh  debug_master_data.py  debug_row_calculation.py  deploy.sh  direct_cost_fix.py  docker-compose.yml  electrical_sheet_processor.py  final_fix.py  final_merged_cells_fix.py  fix_attribute_error.py  fix_column_mapping.py  fix_cost_issue.py  fixed_method.py  fp_sheet_processor.py  generate_icons.py  hard_coded_boq.py  hard_coded_boq_fixed.py  icon.icns  interior_sheet_processor.py  main.py  main_final.py  main_fixed.py  (+21 more)
backend/: __init__.py  app.py  main.py
config/: processor_config.json
data/: master_data.db
docs/: README_HARDCODED.md  chrome_setup.md
frontend/: __init__.py  frontend.py
master_data/: .~lock.master.xlsx#  master.xlsx  ต้นทุน AIS ASP.xlsx
models/: __init__.py  api_models.py  base_models.py  config_models.py  interior_models.py  system_models.py
output/: final_boq_20250611_013254.xlsx  final_boq_20250611_015119.xlsx  final_boq_20250611_025527.xlsx  final_boq_20250611_025958.xlsx  final_boq_20250611_031241.xlsx  final_boq_20250611_031840.xlsx  final_boq_20250611_032252.xlsx  final_boq_20250611_033831.xlsx  final_boq_20250611_034314.xlsx  final_boq_20250611_034901.xlsx  final_boq_20250611_035259.xlsx  (+40 more)
(+11 files in other folders)
