[tool.poetry]
name = "boq-app"
version = "0.1.0"
description = "BOQ Cost Automation Backend"
authors = ["Natchapol Watthanawong <your.email@example.com>"]
license = "woodman decor ltd."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flask = "^2.3.3"
flask-cors = "^4.0.0"
pandas = "^2.1.1"
numpy = "^1.24.3"
openpyxl = "^3.1.2"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.21.1"
werkzeug = "^2.3.7"
xlrd = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-flask = "^1.2.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true